--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   fluttertoast: ^8.2.2
   firebase_database: ^10.2.7
   flutter_riverpod: ^2.4.3
+  camera: ^0.10.5+6
 
 dev_dependencies:
   flutter_test:
