--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,11 @@ dependencies:
   firebase_core: ^2.17.0
   http: ^1.1.0
   firebase_auth: ^4.10.1
-  fluttertoast: ^8.2.2
   firebase_database: ^10.2.7
   flutter_riverpod: ^2.4.3
   camera: ^0.10.5+6
+  curved_navigation_bar: ^1.0.3
+  google_nav_bar: ^5.0.6
 
 dev_dependencies:
   flutter_test:
@@ -52,7 +53,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
